--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_cpp_STANDARD 14)
 set(CMAKE_BUILD_TYPE debug)
 
 set(DATATREE /home/ogolosov/Desktop/analysis/DataTree)
-set(CENTRALITY /home/ogolosov/Desktop/analysis/CentralityFramework)
+set(CENTRALITY /home/ogolosov/Desktop/analysis/centrality)
+set(PID /home/ogolosov/Desktop/analysis/pid)
+set(EXPERIMENT "SHINE")
 
 set(EXE_SOURCES
         CorrectionTask.cpp
@@ -31,10 +33,6 @@ set(CUTS_SOURCES
         cuts/isGoodTrack.cpp
         )
 
-#set(QA_SOURCES
-#        datatreeqa/DataTreeQA.cpp
-#        )
-
 set(BASE_SOURCES
         Base/DataVector.cpp
         Base/DataContainer.cpp
@@ -48,7 +46,6 @@ string(REPLACE ".cpp" ".h" BASE_HEADERS "${BASE_SOURCES}")
 string(REPLACE ".cpp" ".h" DIFF_HEADERS "${DIFF_SOURCES}")
 string(REPLACE ".cpp" ".h" CORR_HEADERS "${CORR_SOURCES}")
 string(REPLACE ".cpp" ".h" CUTS_HEADERS "${CUTS_SOURCES}")
-#string(REPLACE ".cpp" ".h" QA_HEADERS "${QA_SOURCES}")
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
@@ -63,8 +60,9 @@ find_package(ROOT REQUIRED COMPONENTS Core MathCore MathMore RIO Hist Tree Net T
 # Define useful ROOT functions and macros (e.g. ROOT_GENERATE_DICTIONARY)
 include(${ROOT_USE_FILE})
 add_definitions(${ROOT_CXX_FLAGS})
+add_compile_options(-DDATATREE_${EXPERIMENT}) 
 
-include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${DATATREE}/src  ${CENTRALITY}/include)
+include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${DATATREE}/src ${CENTRALITY}/src ${PID}/src)
 
 add_subdirectory(QnCorrections)
 # add_subdirectory(googletest)
@@ -77,27 +75,13 @@ add_library(cuts SHARED ${CUTS_SOURCES})
 target_link_libraries(cuts ${ROOT_LIBRARIES} "${DATATREE}/build/libDataTree.so")
 
 add_library(diffflow SHARED ${DIFF_SOURCES})
-target_link_libraries(diffflow ${ROOT_LIBRARIES} qncorrflow BaseFlow "${DATATREE}/build/libDataTree.so" "${CENTRALITY}/build/libCentrality.so" cuts)
+target_link_libraries(diffflow ${ROOT_LIBRARIES} qncorrflow BaseFlow "${DATATREE}/build/libDataTree.so" "${CENTRALITY}/build/libCentrality.so" "${PID}/build/libPid.so" cuts)
 
 add_library(correlationflow SHARED ${CORR_SOURCES})
 target_link_libraries(correlationflow ${ROOT_LIBRARIES} BaseFlow)
 
-#add_library(dtqa SHARED ${QA_SOURCES})
-#target_link_libraries(dtqa ${ROOT_LIBRARIES} cuts "${DATATREE}/build/libDataTree.so")
-
-
 # Create a main program using the library
 add_executable(main ${EXE_SOURCES})
-target_link_libraries(main correlationflow diffflow BaseFlow ${ROOT_LIBRARIES} ${QNCORRECT_LIB} "${CENTRALITY}/build/libCentrality.so")
+target_link_libraries(main correlationflow diffflow BaseFlow ${ROOT_LIBRARIES} ${QNCORRECT_LIB} "${CENTRALITY}/build/libCentrality.so" "${PID}/build/libPid.so")
 target_include_directories(main PUBLIC ${EXE_HEADERS} ${QNCORRECT_INC})
-
-# Create a exe for centrality (will be removed with a new version of centrality)
-add_executable(centr macro/save_mult.C)
-target_link_libraries(centr ${ROOT_LIBRARIES} "${CENTRALITY}/build/libCentrality.so" "${DATATREE}/build/libDataTree.so" cuts)
-target_include_directories(centr PUBLIC ${EXE_HEADERS})
-
-# Create a exe for QA
-#add_executable(qa macro/datatree_qa.C)
-#target_link_libraries(qa ${ROOT_LIBRARIES} "${DATATREE}/build/libDataTree.so" dtqa cuts)
-#target_include_directories(qa PUBLIC ${EXE_HEADERS})
 
